# OCL_diffusion_tut

./: CMakeLists.txt  README.md  plot.gnu
data/: plot.gnu
src/: kernels.cl  solver.cpp
